tests/baselines/reference/thisInSuperCall2.errors.txt
tests/cases/compiler/thisInSuperCall2.ts(8,9): error TS17006: 'super' must be called before accessing 'this' in the constructor of a derived class.
tests/cases/compiler/thisInSuperCall2.ts(16,15): error TS2332: 'this' cannot be referenced in current location.


==== tests/cases/compiler/thisInSuperCall2.ts (2 errors) ====
    class Base { 
        constructor(a: any) {}
    }
    
    class Foo extends Base {
        public x: number;
        constructor() {
            super(this); // error: "super" has to be called before "this" accessing
            ~~~~~~~~~~~~
!!! error TS17006: 'super' must be called before accessing 'this' in the constructor of a derived class.
        }
    }
    
    
    class Foo2 extends Base {
        public x: number = 0;
        constructor() {
            super(this); // error
                  ~~~~
!!! error TS2332: 'this' cannot be referenced in current location.
        }
    }
    